[project]
name = "bank-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.lin.dependencies]
flake8 = "^7.3.0"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
strict = true
warn_unreachable = true
exclude = 'venv'

[tool.black]
line_length = 119
exclude = '.git'

[tool.isort]
line_length = 119